--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "PixelArtEmoji"
+name = "pixel_art_emoji"
 version = "0.1.0"
 edition = "2018"
-
 
 [dependencies]
 clap = "3.0.0-beta.4"
 image = "0.23.14"
+lazy_static = "1.4.0"
 num-traits = "0.2.14"
 scarlet = "1.1.0"
 unicode_names2 = "0.4.0"
