--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "GPL-3.0-only"
 edition = "2018"
 
 [dependencies]
-clap = "3.0.0-beta.4"
+clap = { version = "3.0.0", features = ["cargo", "derive"] }
 image = "0.23.14"
 lazy_static = "1.4.0"
 num-traits = "0.2.14"
