--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,3 +16,6 @@ jobs:
           command: build
           args: --release --all-features
       - uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --all-features
